--- a/color_textu.html
+++ b/color_textu.html
@@ -3,6 +3,7 @@
     
 <head>
     <link href="color_textu.css" rel="stylesheet" type="text/css">
+    <meta charset = "UTF-8">
 </head>
 <body>
     <div id="color_textu_html">
