--- a/jo.html
+++ b/jo.html
@@ -1,6 +1,7 @@
 <!DOCTYPEhtml>
 <head>
     <link href="jo.css" rel="stylesheet" type="text/css">
+     <meta charset = "UTF-8">
 </head>
 <body>
  <div id="info_jo">
