--- a/modelatge.html
+++ b/modelatge.html
@@ -3,6 +3,7 @@
     
 <head>
     <link href="modelatge.css" rel="stylesheet" type="text/css">
+     <meta charset = "UTF-8">
 </head>
     
 <body> 
