--- a/animacio.html
+++ b/animacio.html
@@ -3,6 +3,7 @@
     
 <head>
     <link href="animacio.css" rel="stylesheet" type="text/css">
+     <meta charset = "UTF-8">
 </head>
     
 <body> 
