--- a/dibuix.html
+++ b/dibuix.html
@@ -3,6 +3,7 @@
     
 <head>
     <link href="dibuix.css" rel="stylesheet" type="text/css">
+     <meta charset = "UTF-8">
 </head>
 <body>
     <div id="dibuix_html">
