--- a/illuminacio.html
+++ b/illuminacio.html
@@ -3,6 +3,7 @@
     
 <head>
     <link href="illuminacio.css" rel="stylesheet" type="text/css">
+     <meta charset = "UTF-8">
 </head>
 <body>
     <div id="illuminacio_html">
